--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -30,7 +30,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build Docker image
-        run: docker build -t sivapranesh123/docker-project:latest ./backend
+        run: docker build -t sivapranesh123/docker-project ./backend
 
       - name: Push Docker image
-        run: docker push sivapranesh123/docker-project:latest
+        run: docker push sivapranesh123/docker-project
